# ezpl

./: .gitignore  .pre-commit-config.yaml  README.md  build_package.py  pyproject.toml  requirements.in
.hooks/: README.md  install-hook.bat  install.bat  install.sh  post-commit  pre-commit  uninstall-hook.bat
docs/api/: API_DOCUMENTATION.md  SUMMARY.md
docs/cli/: CLI_DOCUMENTATION.md  CONFIG_GUIDE.md
docs/examples/: EXAMPLES.md
docs/tests/: SUMMARY.md  TEST_DOCUMENTATION.md
examples/: demo.py  quick_test.py
ezpl/: __init__.py  ezpl.py
ezpl/cli/: __init__.py  main.py
ezpl/cli/commands/: __init__.py  config.py  info.py  logs.py  version.py
ezpl/cli/utils/: __init__.py  env_manager.py  log_parser.py  log_stats.py
ezpl/config/: __init__.py  defaults.py  manager.py
ezpl/core/: __init__.py  exceptions.py  interfaces.py
ezpl/handlers/: __init__.py  console.py  file.py  utils.py
ezpl/handlers/wizard/: __init__.py  core.py  dynamic.py  json.py  panels.py  progress.py  tables.py
ezpl/types/: __init__.py  log_level.py  patterns.py
ezpl/utils/: __init__.py
tests/: __init__.py  conftest.py  pytest.ini  run_tests.py
tests/integration/: __init__.py  test_cli_integration.py  test_config_integration.py  test_ezpl_integration.py
tests/robustness/: __init__.py  test_edge_cases.py  test_error_handling.py  test_special_chars.py
tests/unit/: __init__.py  test_config.py  test_exceptions.py  test_ezpl.py  test_logger.py  test_printer.py  test_types.py  test_utils.py  test_wizard.py
