[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Ezpl"
version = "1.0.0"
description = "Modern Python logging framework with Rich console output and loguru file logging, featuring advanced display capabilities, configuration management, and a simple typed API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Neuraaak" }]
maintainers = [{ name = "Neuraaak" }]
keywords = ["logging", "rich", "loguru", "console", "file", "framework", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]

dependencies = [
    "loguru>=0.7.2", # Pour FileLogger uniquement
    "rich>=13.0.0",  # Pour ConsolePrinter et RichWizard (gère les couleurs, panels, tables, progress bars)
    "click>=8.0.0",  # Pour CLI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0", # Pour le mocking
    "pytest-xdist>=3.0.0", # Pour les tests parallèles
    "flake8>=5.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/neuraaak/ezpl"
Repository = "https://github.com/neuraaak/ezpl"

[project.scripts]
ezpl = "ezpl.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ezpl", "ezpl.*"]
